@@ -1,5 +1,8 @@
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
-  <xsl:output method="html" indent="yes"/>
+  <xsl:output method="html"
+	      indent="yes"
+	      doctype-public="-//W3C//DTD HTML 4.01 Transitional//EN"
+	      doctype-system="http://www.w3.org/TR/html4/loose.dtd"/>
 
   <xsl:template match="@*|node()">
     <xsl:copy>
