@@ -15,7 +15,7 @@
     <p>
       Read
       the <a
-      href="http://www.lichteblau.com/ldapvi/manual/manual.xml">manual</a>.
+      href="http://www.lichteblau.com/ldapvi/manual/">manual</a>.
     </p>
   </section>
 
