@@ -16,6 +16,8 @@ New features:
     ldapvi syntax, taking precedence over .ldaprc and /etc/ldap.conf if
     present
     * new command line argument --profile.
+  - show optional arguments as comments
+    * new command line argument -m (--may)
 Bugfixes:
   - always replace entire attributes (fixing a bug reported by Javier Barroso)
   - fixed LDIF export to always Base64-encode non-ASCII values
